src/objects/Outcome_Influencing_Organization__c.object
<CustomObject>
    <description>Organizations that play a role in influencing the Outcome</description>
    <fields>
        <fullName>Alignment__c</fullName>
        <inlineHelpText>How close this group is to our position</inlineHelpText>
        <label>Alignment</label>
        <picklist>
            <picklistValues>
                <fullName>Strongly Agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weakly Agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weakly Disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strongly Disagree</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <inlineHelpText>Organization involved in this Decision</inlineHelpText>
        <label>Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Outcomes - Influencing</relationshipLabel>
        <relationshipName>Outcomes_Influencing</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Outcome_Organization_Role__c</fullName>
        <inlineHelpText>What is the Organization&apos;s primary role in this Outcome?</inlineHelpText>
        <label>Influence Role</label>
        <picklist>
            <picklistValues>
                <fullName>Opposition Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Outcome__c</fullName>
        <inlineHelpText>Outcome this Organization is involved with</inlineHelpText>
        <label>Outcome</label>
        <referenceTo>Outcome__c</referenceTo>
        <relationshipLabel>Influencers - Organizations</relationshipLabel>
        <relationshipName>R00N700000026L8oEAE</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Outcome-Influencing Organization</label>
    <nameField>
        <displayFormat>OO-{00000}</displayFormat>
        <label>Outcome-Influencing Organization</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Outcome-Influencing Organizations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>